--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <script type="text/javascript" src="markers.js"></script>
     <style type="text/css">
       .mark { position: absolute;z-index:10;}
-      #map {position: relative;} 
+      .map {position: relative; float: left; margin-right: 30px; } 
     </style>
   </head>
   <body>
     <div style=""><p>Hi, this is an example</p></div>
-    <div id="map">
+    <div class="map">
+      <img src="img/map.jpg" alt="example">
+      <img src="img/arrow-down.png" alt="example" class="mark" style="top:76px;left:280px">
+      <img src="img/arrow-down.png" alt="example" class="mark" style="top:257px;left:49px" >
+      <img src="img/arrow-down.png" alt="example" class="mark" style="top:271px;left:299px" >
+      <img src="img/arrow-down.png" alt="example" class="mark" style="top:271px;left:257px" >
+    </div>
+    <div class="map">
       <img src="img/map.jpg" alt="example">
       <img src="img/arrow-down.png" alt="example" class="test mark" style="top:76px;left:280px">
       <img src="img/arrow-down.png" alt="example" class="test mark" style="top:257px;left:49px" >
